--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ h11==0.14.0
 httpcore==0.17.3
 httplib2==0.22.0
 idna==3.4
-0.7.0.240406
+ifcopenshell==0.7.0.240406
 importlib-metadata==6.8.0
 ipython==8.14.0
 itsdangerous==2.1.2
